--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -100,7 +100,6 @@
 	padding: 10px 0;
 }
 </style>
-
 <link rel="stylesheet" type="text/css"
 	href="//fonts.googleapis.com/css?family=Open+Sans" />
 
@@ -111,17 +110,25 @@
 				<img src="/img/calpers_logo.png">
 			</center>
 		</header>
+		 <div class="activation__subject">Registration Successful</div>
+    <div class="activation__arrow"></div>
+    <div class="activation__message">
+      <div> Dear, <span class="activation__user">Customer</span>
+        <!--<Username>-->
+        <br/>You've successfully registered.</div>
+    </div>
+    <div class="activation__link">
+      <div>
+        Please activate your account by clicking on the confirmation link sent to your registered email id.
+	</div>
+      <div style="padding-top:45px;">
+      </div>
+    </div>
+    <div class="activation__footer">
+      Thank you. Sincerely,
+      <br/> Calpers Support Team
+      <br/>
+    </div>
+  </div>
+</div>
 
-		<div class="activation__subject">Registration Successful</div>
-		<div>
-			<p>You've successfully registered. Please activate your account
-				by clicking on the confirmation link sent to your registered email
-				id.
-			</p>
-		</div>
-	</div>
-	<div class="activation__footer">
-		Thank you. Sincerely, <br /> Calpers Support Team <br />
-	</div>
-</div>
-</div>
