--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -59,9 +59,10 @@ img {
                             <div class="sb-sidenav-menu-heading" ></div>
                             <a class="nav-link" href="#" >
                                 <div class="sb-nav-link-icon" style="color:white"><i class="fas fa-home"></i></div>
-                                <span style="color:white">Home</span>
+                                <span style="color:white">Home
+							</span>
                             </a>
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/profile">
                                 <div class="sb-nav-link-icon" style="color:white"><i class="fas fa-user"></i></div>
                                 <span style="color:white">View/Edit Profile</span>
                             </a>
@@ -84,10 +85,8 @@ img {
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid">
-                        <h1 class="mt-4">Home</h1>
-                        
-
-
+                        <h2 class="mt-4">Home</h2>
+ 
                         <div class="card">
                             <div class="card-header">
                                 <h5 class="card-title">Profile</h5>
@@ -97,19 +96,27 @@ img {
                                 <form>
                    
 								<!-- --------------------------------------------------------- -->
-								<div id="tabs">
-										<div id="nav" class="form-group">
-											<label class="form-label">Hello %User%, do you want to draw or upload your signature?</label><br>
-											<input type="radio"  name="tab" value="pkfrom" class="div1" />
-											  <label>DRAW</label><br>
-											  <input type="radio"  name="tab" value="pkfrom" class="div2" />
-											  <label>UPLOAD</label><br>
-										</div>
-									
-								<!-- --------------------------------------------------- -->
-								<div id="div1" class="hide">
-								<div class="row signpad-padding">
-									<div class="col-md-6 col-md-offset-3">
+						 
+							 	<div id="container" class="form-group">
+									<label class="form-label">Hello %User%, do you want to draw or upload your signature?</label><br>
+									<input type="radio" id="drawOpt" name="signOption" value="draw" class="div1" />
+									  <label for="email">DRAW</label><br>
+									  <input type="radio"  id="uploadOpt" name="signOption" value="upload" class="div2" />
+									  <label for="phone">UPLOAD</label><br>
+								</div>
+									 
+								<!--   ------------------------------------------------------------------ -->	
+								<div id="drawContainer" class="container" style="display: none;">
+								<div>
+									<div id="signpad-ajax-msg" class="alert alert-dismissible" style="display: none;">
+										<button type="button" class="close" data-dismiss="alert"
+											aria-hidden="true">×</button>
+										<h4></h4>
+									</div>
+								</div>
+								<div id="signpad-div" class="row signpad-padding">
+									<div>
+										<h3>Please draw your signature</h3>
 										<div class="wrapper">
 											<canvas id="signature-pad" class="signature-pad" width=400
 												height=200></canvas>
@@ -119,24 +126,48 @@ img {
 											<button id="clear">Clear</button>
 										</p>
 									</div>
-								</div>	
 								</div>
+							</div>
 								<!-- ----------------------------------------------------------- -->
-								<div id="div2" class="hide">
-								<div class="row">
-									<div class="col-md-6 col-md-offset-3">
-										<form th:action=@{/uploadSignatureCall} method="post"
-											enctype="multipart/form-data">
-											<h1></h1>
-											<input type="file" name="signatureFile">
-											<h1></h1>
-											<input type="submit" name="submitFile"
-												class="form-control btn btn-primary" value="Upload Signature" />
-										</form>
+								
+								<div id="uploadContainer" class="container" style="display: none;">
+								<div>
+									<div id="upload-ajax-msg" class="alert alert-dismissible"
+										style="display: none;">
+										<button type="button" class="close" data-dismiss="alert"
+											aria-hidden="true">×</button>
+											<h4></h4>
 									</div>
 								</div>
+								<div class="row">
+									<div>
+										<div id="uploadSignDiv">
+											<h3>Please upload your signature</h3>
+											<canvas id="testCanvas" width="400" height="250"
+												style="border: 1px solid black;">Your browser does not support canvas.</canvas>
+											<br />
+											<div id="fileSelectDiv">
+					
+												<input type="file" id="signatureFile"
+													onchange="handleFileSelect()" />
+											</div>
+											<div id="cropBtns">
+												<input type="button" onclick="cropper.startCropping()"
+													value="Start cropping" /> <input type="button"
+													onclick="cropper.getCroppedImageSrc()" value="Crop" /> <input
+													type="button" onclick="cropper.restore()" value="Restore" />
+											</div>
+											<h1></h1>
+											<input type="button" name="submitFile" id="upload"
+												class="form-control btn btn-primary" value="Upload Signature" />
+										</div>
+									</div>
 								</div>
+							</div>
 								<!-- -------------------------------------------------------------- -->
+                                   <br>
+                                   <br><br>
+                                   
                                     <div class="form-group">
                                         <label class="form-label">Please provide a preferred name with your signature.</label>
                                         <input type="text" class="form-control" placeholder="E-Signature Name">
@@ -153,68 +184,116 @@ img {
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-       	<script src="/js/scripts.js"></script>
+       	
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
-		<script type="text/javascript">
-		(function(){
-	      var tabs = document.getElementById('tabs');
-	      var nav = tabs.getElementsByTagName('input');
-	
-	      /*
-	      * Hide all tabs
-	      */
-	      function hideTabs(){
-	        var tab = tabs.getElementsByTagName('div');
-	        for(var i=0;i<=nav.length;i++){
-	          if(tab[i].className == 'tab'){
-	            tab[i].className = tab[i].className + ' hide';
-	          }
-	        }
-	      }
-		  
-		  function showTab(tab){
-	        document.getElementById(tab).className = 'tab'
-	      }
-	
-	      hideTabs(); /* hide tabs on load */
-	
-	      /*
-	      * Add click events
-	      */
-	      for(var i=0;i<nav.length;i++){
-	        nav[i].onclick = function(){
-	          hideTabs();
-	          showTab(this.className);
-	        }
-	      }
-		})();
+		<script type="text/javascript"  src="/js/cropper.js"></script>
+		<script>
 		
-		var signaturePad = new SignaturePad(document
-				.getElementById('signature-pad'), {
-			backgroundColor : 'rgba(255, 255, 255, 0)',
-			penColor : 'rgb(0, 0, 0)'
-		});
-		var saveButton = document.getElementById('save');
-		var cancelButton = document.getElementById('clear');
-
-		saveButton.addEventListener('click', function(event) {
+		$(document).ready(function() {
+			  $('input[type=radio][name="signOption"]').on('change', function() {
+				  if(this.value=="upload") {
+					  $('#uploadContainer').show();
+					  $('#drawContainer').hide();
+				  } else {
+					  $('#drawContainer').show();
+					  $('#uploadContainer').hide();
+				  }
+			  });
+			});
+		// CROPPER SCRIPT
+		cropper.start(document.getElementById("testCanvas"), 1); // initialize cropper by providing it with a target canvas and a XY ratio (height = width * ratio)
+		
+		function handleFileSelect() {
+			// this function will be called when the file input below is changed
+			var file = document.getElementById("signatureFile").files[0];  // get a reference to the selected file
+			
+			var reader = new FileReader(); 
+			reader.onload = function(event) {
+				var data = event.target.result; // the "data url" of the image
+				cropper.showImage(data); 
+				console.log("Cropper--->"+data)
+			};
+			// this loads the file as a data url calling the function above once done
+			reader.readAsDataURL(file); 
+		
+		}
+		
+		var uploadBtn = document.getElementById('upload');
+		var myCanvas = document.getElementById("testCanvas");
+		// on click of Upload Button
+		uploadBtn.addEventListener('click', function(event) {
 			event.preventDefault();
-			var data = signaturePad.toDataURL('image/png');
+			var dataURI = myCanvas.toDataURL();
+			console.log("on Click of upload"+ dataURI);
+			var data = {
+					imgURI : dataURI
+					
+			};
 			$.ajax({
-				type : "post",
-				url : "/hello",
-				data : data,
+				type : "POST",
+				data : JSON.stringify(data),
+				contentType : "application/json",
+			    url : "saveSignature",
 				cache : false,
 				success : function(data) {
+					if(data == "Success") {
+						$('#upload-ajax-msg').addClass('alert-success');
+						$('#upload-ajax-msg').find("h4").append("Successfully saved signature.");
+						$('#upload-ajax-msg').show();
+						$('#uploadSignDiv').hide();
+					}
+					else {
+						$('#upload-ajax-msg').addClass('alert-danger');
+						$('#upload-ajax-msg').find("h4").append("Error while saving signature. Please try again.");
+						$('#upload-ajax-msg').show();
+					}
 				}
 			});
+			
 		});
+		
+		<!-- ----------Signature Pad Script------------------->
+			var signaturePad = new SignaturePad(document
+					.getElementById('signature-pad'), {
+				backgroundColor : 'rgba(255, 255, 255, 0)',
+				penColor : 'rgb(0, 0, 0)'
+			});
+			var saveButton = document.getElementById('save');
+			var cancelButton = document.getElementById('clear');
 
-		cancelButton.addEventListener('click', function(event) {
-			signaturePad.clear();
-		});
+			saveButton.addEventListener('click', function(event) {
+				event.preventDefault();
+				var sign = signaturePad.toDataURL('image/png');
+				var data ={
+						signImg : sign
+				};
+				$.ajax({
+					type : "POST",
+					data : JSON.stringify(data),
+					contentType : "application/json",
+				    url : "saveSignature",
+					cache : false,
+					success : function(data) {
+						if(data == "Success") {
+							$('#signpad-ajax-msg').addClass('alert-success');
+							$('#signpad-ajax-msg').find("h4").append("Successfully saved signature.");
+							$('#signpad-ajax-msg').show();
+							$('#signpad-div').hide();
+						}
+						else {
+							$('#signpad-ajax-msg').addClass('alert-danger');
+							$('#signpad-ajax-msg').find("h4").append("Error while saving signature. Please try again.");
+							$('#signpad-ajax-msg').show();
+						}
+					}
+				});
+			});
+
+			cancelButton.addEventListener('click', function(event) {
+				signaturePad.clear();
+			});
 		</script>
         
             
