ESM-18: Session Changes and Dashboard changes

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -32,12 +32,16 @@
 h1 {
 	text-align: center;
 }
+#registerheader {
+    margin-top: -18px;
+    margin-bottom: -40px;
+}
 </style>
 </head>
 <body class="hold-transition register-page">
-	<header>
+	<header  id="registerheader">
 		<center>
-			<img src="/img/calpers_logo.png">
+			<img style="width: 25%;" src="/img/calpers_logo.png">
 		</center>
 	</header>
 	<div class="register-box">
