Removed duplicate html files

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -78,14 +78,14 @@ img {
 						<a class="nav-link" href="#">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="fas fa-home"></i>
-							</div> <span style="color: white">Home </span>
+							</div> <span style="color: white">Home</span>
 						</a> <a class="nav-link" href="/profile">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="fas fa-user"></i>
 							</div> <span style="color: white">View/Edit Profile</span>
 						</a> <a class="nav-link" href="#">
 							<div class="sb-nav-link-icon" style="color: white">
-								<i class="fas fa-phone"></i>
+								<i class="glyphicon glyphicon-lock"></i>
 							</div> <span style="color: white">Change password</span>
 						</a>
 
@@ -205,13 +205,8 @@ img {
 			</main>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-		crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		crossorigin="anonymous"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		crossorigin="anonymous"></script> -->
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
