--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -36,6 +36,10 @@ h1 {
     margin-top: -18px;
     margin-bottom: -40px;
 }
+.tcPara {
+	padding-left: 10px;
+	padding-right: 10px;
+}
 </style>
 </head>
 <body class="hold-transition register-page">
@@ -155,10 +159,10 @@ h1 {
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
-					<h4 class="modal-title">Terms & Conditions</h4>
+					<h3 class="modal-title" style="text-align:center;">Terms & Conditions</h3>
 				</div>
 				<div class="modal-body" style="text-align: justify;">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					<p class="tcPara">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						Vestibulum suscipit eget metus non cursus. Praesent sollicitudin
 						leo elit, non lobortis nunc vehicula vitae. Aenean in lacinia ex.
 						Aenean vitae arcu enim. Aliquam ac urna sit amet erat cursus
@@ -169,7 +173,7 @@ h1 {
 						Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
 						posuere cubilia curae; Duis scelerisque sit amet odio vel
 						dignissim.</p>
-					<p>Morbi nec leo ut justo consequat consequat. Phasellus
+					<p class="tcPara">Morbi nec leo ut justo consequat consequat. Phasellus
 						aliquet lectus facilisis, rutrum libero quis, efficitur leo. Cras
 						vitae vehicula diam. Ut hendrerit mi ac ligula vehicula eleifend.
 						Praesent justo erat, tincidunt vel accumsan id, vulputate vitae
@@ -179,7 +183,7 @@ h1 {
 						egestas, eleifend eros. In sollicitudin sit amet metus a
 						consectetur. Vivamus neque nulla, ultrices sed lacinia lobortis,
 						ullamcorper vitae lectus.</p>
-					<p>Quisque finibus pharetra elit a consequat. Nullam finibus
+					<p class="tcPara">Quisque finibus pharetra elit a consequat. Nullam finibus
 						eros non odio malesuada, vitae condimentum ante ultrices. Aenean
 						eget felis a enim condimentum rutrum. In ultrices a mi non
 						fringilla. Maecenas hendrerit, sem sed sagittis fringilla, est sem
