--- a/src/main/resources/templates/calpers_Viewprofile.html
+++ b/src/main/resources/templates/calpers_Viewprofile.html
@@ -54,7 +54,11 @@ img {
 .form-group {
 	margin-bottom: 1rem;
 }
+
+label {
+font-weight: normal;
 }
+
 </style>
 
 <title>View Profile</title>
@@ -77,7 +81,7 @@ img {
 				<div class="sb-sidenav-menu">
 					<div class="nav">
 						<div class="sb-sidenav-menu-heading"></div>
-						<a class="nav-link" href="#">
+						<a class="nav-link" href="/dashboard">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="fas fa-home"></i>
 							</div> <span style="color: white">Home</span>
@@ -87,7 +91,7 @@ img {
 							</div> <span style="color: white">View/Edit Profile</span>
 						</a> <a class="nav-link" href="#">
 							<div class="sb-nav-link-icon" style="color: white">
-								<i class="fas fa-phone"></i>
+								<i class="glyphicon glyphicon-lock"></i>
 							</div> <span style="color: white">Change password</span>
 						</a>
 
@@ -104,17 +108,17 @@ img {
 		</div>
 		<div id="layoutSidenav_content">
 			<div class="container-fluid">
-				<h1 class="mt-4">View/Edit Profile</h1>
+				<h4>View/Edit Profile</h4>
 
 				<div class="card">
 					<div class="card-header">
 						<div class="row">
 							<h5 class="card-title col-sm-10">View Profile</h5>
-							<p style="float: right;" class="col-sm-2">
-								<a href="#" class="btn btn-info btn-sm"> <span
+							<div style="float: right;" class="col-sm-2">
+								<a href="/editprofile" class="btn btn-info btn-sm"> <span
 									class="glyphicon glyphicon-wrench"></span> Edit Profile
 								</a>
-							</p>
+							</div>
 						</div>
 					</div>
 					<div class="card-body">
