--- a/src/main/resources/templates/calpers_editprofile.html
+++ b/src/main/resources/templates/calpers_editprofile.html
@@ -7,10 +7,17 @@
 <meta name="description" content="" />
 <meta name="author" content="" />
 <link rel="icon" href="/img/cal_logo_small.png" type="image/icon type">
-<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/south-street/jquery-ui.css" rel="stylesheet">
-<link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css"
+	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+<link
+	href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/south-street/jquery-ui.css"
+	rel="stylesheet">
+<link
+	href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css"
+	rel="stylesheet" crossorigin="anonymous" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"
+	crossorigin="anonymous"></script>
 <link rel="stylesheet" type="text/css" href="/css/dashboard.css">
 <style>
 .wrapper {
@@ -38,6 +45,11 @@ img {
 	border: black;
 	border-style: solid;
 }
+
+label {
+font-weight: normal;
+}
+
 </style>
 
 <title>Signature Capture</title>
@@ -45,181 +57,164 @@ img {
 
 <body class="sb-nav-fixed">
 	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-            <a class="navbar-brand" href="#"><img src="/dist/img/calpers_logo.png" style="height:100%; width:auto;" /></a>
-            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
-                <i class="fas fa-bars"></i>
-            </button>
-            
-     </nav>
-     <div id="layoutSidenav">
-            <div id="layoutSidenav_nav">
-                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-                    <div class="sb-sidenav-menu">
-                        <div class="nav">
-                            <div class="sb-sidenav-menu-heading" ></div>
-                            <a class="nav-link" href="#" >
-                                <div class="sb-nav-link-icon" style="color:white"><i class="fas fa-home"></i></div>
-                                <span style="color:white">Home</span>
-                            </a>
-                            <a class="nav-link" href="#">
-                                <div class="sb-nav-link-icon" style="color:white"><i class="fas fa-user"></i></div>
-                                <span style="color:white">View/Edit Profile</span>
-                            </a>
-                            <a class="nav-link" href="#">
-                                <div class="sb-nav-link-icon" style="color:white"><i class="fas fa-phone"></i></div>
-                                <span style="color:white">Change password</span>
-                            </a>
-                            
-                            <li sec:authorize="isAuthenticated()">
-                            <a class="nav-link" href="/logout">                            	
-                                <div class="sb-nav-link-icon" style="color:white"><i class="fas fa-power-off"></i></div>
-                               <span style="color:white">Logout</span>        
-                            </a>
-                            </li>
-                 
-                            
-                        </div>
-                </nav>
-            </div>
-            <div id="layoutSidenav_content">
-                <main>
-                    <div class="container-fluid">
-                        <h1 class="mt-4">View/Edit</h1>
-                        
+		<a class="navbar-brand" href="#"><img
+			src="/dist/img/calpers_logo.png" style="height: 100%; width: auto;" /></a>
+		<button class="btn btn-link btn-sm order-1 order-lg-0"
+			id="sidebarToggle" href="#">
+			<i class="fas fa-bars"></i>
+		</button>
+
+	</nav>
+	<div id="layoutSidenav">
+		<div id="layoutSidenav_nav">
+			<nav class="sb-sidenav accordion sb-sidenav-dark"
+				id="sidenavAccordion">
+				<div class="sb-sidenav-menu">
+					<div class="nav">
+						<div class="sb-sidenav-menu-heading"></div>
+						<a class="nav-link" href="/dashboard">
+							<div class="sb-nav-link-icon" style="color: white">
+								<i class="fas fa-home"></i>
+							</div> <span style="color: white">Home</span>
+						</a> <a class="nav-link" href="/viewprofile">
+							<div class="sb-nav-link-icon" style="color: white">
+								<i class="fas fa-user"></i>
+							</div> <span style="color: white">View/Edit Profile</span>
+						</a> <a class="nav-link" href="#">
+							<div class="sb-nav-link-icon" style="color: white">
+								<i class="glyphicon glyphicon-lock"></i>
+							</div> <span style="color: white">Change password</span>
+						</a>
+
+						<li sec:authorize="isAuthenticated()"><a class="nav-link"
+							href="/logout">
+								<div class="sb-nav-link-icon" style="color: white">
+									<i class="fas fa-power-off"></i>
+								</div> <span style="color: white">Logout</span>
+						</a></li>
 
 
-                        <div class="card">
-                            <div class="card-header">
-                                <h5 class="card-title"> Edit Profile</h5>
+					</div>
+			</nav>
+		</div>
+		<div id="layoutSidenav_content">
+			<div class="container-fluid">
+				<h4>View/Edit Profile</h4>
+				<div class="card">
+					<div class="card-header">
+						<div class="row">
+							<h5 class="card-title">Edit Profile</h5>
+						</div>
+					</div>
+					<div class="card-body">
+						<!-- -------------------------------------------------------------- -->
 
-                            </div>
-                            <div class="card-body">
-                                <form>
-    <!-- -------------------------------------------------------------- -->
-           <form class="form-horizontal" role="form">
-          <div class="form-group">
-		  <label class="col-lg-3 control-label">First name:</label>
-			<span class="glyphicon glyphicon-user form-control-feedback"></span>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="Jane">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Last name:</label>
-			<span
-						class="glyphicon glyphicon-user form-control-feedback"></span>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="Bishop">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Organization:</label>
-			<div class="col-lg-8">
-              <input class="form-control" type="text" value="Calpers">
-            </div>
-            </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Email:</label>
-			<div class="col-lg-8">
-          <input class="form-control" type="text" value=" janesemail@gmail.com" disabled>
-            </div>
-            </div>
-		  <div class="form-group">
-            <label class="col-lg-3 control-label">Contact No:</label>
-			<div class="col-lg-8">
-              <input class="form-control" type="text" value="9164719963">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Preferred Name:</label>
-			<div class="col-lg-8">
-              <input class="form-control" type="text" value="janeuser">
-            </div>
-          </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label"></label>
-            <div class="col-lg-8">
-              <input type="button" class="btn btn-primary" value="Save Changes">
-              <span></span>
-              <input type="reset" class="btn btn-default" value="Cancel">
-            </div>
-          </div>
-        </form>
-      </div>
-  </div>
-</div>
-<hr>
-                         
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script> 
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-       	<script src="/js/scripts.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
-		<script type="text/javascript">
-		(function(){
-	      var tabs = document.getElementById('tabs');
-	      var nav = tabs.getElementsByTagName('input');
-	
-	      /*
-	      * Hide all tabs
-	      */
-	      function hideTabs(){
-	        var tab = tabs.getElementsByTagName('div');
-	        for(var i=0;i<=nav.length;i++){
-	          if(tab[i].className == 'tab'){
-	            tab[i].className = tab[i].className + ' hide';
-	          }
-	        }
-	      }
-		  
-		  function showTab(tab){
-	        document.getElementById(tab).className = 'tab'
-	      }
-	
-	      hideTabs(); /* hide tabs on load */
-	
-	      /*
-	      * Add click events
-	      */
-	      for(var i=0;i<nav.length;i++){
-	        nav[i].onclick = function(){
-	          hideTabs();
-	          showTab(this.className);
-	        }
-	      }
-		})();
-		
-		var signaturePad = new SignaturePad(document
-				.getElementById('signature-pad'), {
-			backgroundColor : 'rgba(255, 255, 255, 0)',
-			penColor : 'rgb(0, 0, 0)'
-		});
-		var saveButton = document.getElementById('save');
-		var cancelButton = document.getElementById('clear');
+						<div class="col-md-8 col-md-offset-2">
+							<form class="form-horizontal" role="form">
+								<div class="form-group editFields">
+									<label class="col-md-4">First name:</label>
+									<div class="col-md-8">
+										<input class="form-control" type="text"
+											th:value="${session.User.firstName}">
+									</div>
+								</div>
+								<div class="form-group editFields">
+									<label class="col-md-4">Last name:</label>
+									<div class="col-md-8">
+										<input class="form-control" type="text"
+											th:value="${session.User.lastName}">
+									</div>
+								</div>
+								<div class="form-group editFields">
+									<label class="col-md-4">Organization:</label>
+									<div class="col-md-8">
+										<input class="form-control" type="text"
+											th:value="${session.User.organization}">
+									</div>
+								</div>
+								<div class="form-group editFields">
+									<label class="col-md-4">Email:</label>
+									<div class="col-md-8">
+										<input class="form-control" type="text"
+											th:value="${session.User.email}" disabled>
+									</div>
+								</div>
+								<div class="form-group editFields">
+									<label class="col-md-4">Contact No:</label>
+									<div class="col-md-8">
+										<input class="form-control" type="text"
+											th:value="${session.User.contactNo}">
+									</div>
+								</div>
+							</form>
+							<div class="form-group" style="padding-top: 20px;">
+								<label class="col-lg-3 control-label"></label>
+								<div class="col-lg-8">
+									<input type="button" class="btn btn-primary"
+										value="Save Changes"> <span></span> <input
+										type="reset" class="btn btn-default" value="Cancel">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-		saveButton.addEventListener('click', function(event) {
-			event.preventDefault();
-			var data = signaturePad.toDataURL('image/png');
-			$.ajax({
-				type : "post",
-				url : "/hello",
-				data : data,
-				cache : false,
-				success : function(data) {
+			</div>
+		</div>
+	</div>
+	<hr>
+
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+		crossorigin="anonymous"></script>
+	<script src="/js/scripts.js"></script>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
+	<script type="text/javascript">
+		(function() {
+			var tabs = document.getElementById('tabs');
+			var nav = tabs.getElementsByTagName('input');
+
+			/*
+			 * Hide all tabs
+			 */
+			function hideTabs() {
+				var tab = tabs.getElementsByTagName('div');
+				for (var i = 0; i <= nav.length; i++) {
+					if (tab[i].className == 'tab') {
+						tab[i].className = tab[i].className + ' hide';
+					}
 				}
-			});
-		});
+			}
 
-		cancelButton.addEventListener('click', function(event) {
-			signaturePad.clear();
-		});
-		</script>
-        
-            
-     <!-- ----------------------------------------------------------------------------------------------------------------------------------------------- -->       
+			function showTab(tab) {
+				document.getElementById(tab).className = 'tab'
+			}
+
+			hideTabs(); /* hide tabs on load */
+
+			/*
+			 * Add click events
+			 */
+			for (var i = 0; i < nav.length; i++) {
+				nav[i].onclick = function() {
+					hideTabs();
+					showTab(this.className);
+				}
+			}
+		})();
+
+	<!-- ----------------------------------------------------------------------------------------------------------------------------------------------- -->
 </body>
 </html>
